Solve Errors in Code;

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "id": "dffd7d73",
    "metadata": {},
    "outputs": [
@@ -1094,15 +1094,14 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mZeroDivisionError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[45]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Percentage of women who survived\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m rate_women = \u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mwomen\u001b[49m\u001b[43m)\u001b[49m\u001b[43m/\u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mwomen\u001b[49m\u001b[43m)\u001b[49m*\u001b[32m100\u001b[39m\n\u001b[32m      3\u001b[39m rate_women\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[58]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Percentage of women who survived\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m rate_women = \u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mwomen\u001b[49m\u001b[43m)\u001b[49m\u001b[43m/\u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mwomen\u001b[49m\u001b[43m)\u001b[49m*\u001b[32m100\u001b[39m\n",
       "\u001b[31mZeroDivisionError\u001b[39m: division by zero"
      ]
     }
    ],
    "source": [
     "# Percentage of women who survived\n",
-    "rate_women = sum(women)/len(women)*100\n",
-    "rate_women"
+    "rate_women = sum(women)/len(women)*100"
    ]
   },
   {
