--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -597,23 +597,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 61,
    "id": "d5f544b9",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Swapnalipc\\AppData\\Local\\Temp\\ipykernel_20640\\436144662.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  train_df['Age'].fillna(train_df['Age'].median(),inplace=True)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -631,62 +618,26 @@
        "Name: Age, Length: 891, dtype: float64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Fill age with median\n",
-    "train_df['Age'].fillna(train_df['Age'].median(),inplace=True)\n",
+    "train_df.fillna(train_df['Age'].median(),inplace=True)\n",
     "train_df['Age']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "80977e31",
+   "execution_count": 60,
+   "id": "6f2e9710",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Swapnalipc\\AppData\\Local\\Temp\\ipykernel_20640\\926581555.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  train_df['Embarked'].fillna(train_df['Embarked'].mode()[0],inplace=True)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0      S\n",
-       "1      C\n",
-       "2      S\n",
-       "3      S\n",
-       "4      S\n",
-       "      ..\n",
-       "886    S\n",
-       "887    S\n",
-       "888    S\n",
-       "889    C\n",
-       "890    Q\n",
-       "Name: Embarked, Length: 891, dtype: object"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# fill embarked with mode\n",
-    "train_df['Embarked'].fillna(train_df['Embarked'].mode()[0],inplace=True)\n",
-    "train_df['Embarked']"
+    "train_df.fillna(train_df['Embarked'].mode()[0],inplace=True)"
    ]
   },
   {
